Revert "Renames and a little forward progress. Minor, really."
This reverts commit 6215e7edb5a4f30111b734fc9de4819112676682.

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <script src="processing-1.4.1.js"></script>
   </head>
   <body>
-    <canvas data-processing-sources="mainScreen.pde"></canvas>
+    <canvas data-processing-sources="mything.pde"></canvas>
   </body>
 </html>
 
