--- a/index.htm
+++ b/index.htm
@@ -2,10 +2,29 @@
   <head>
     <title>SQWARP</title>
     <meta charset="UTF-8">
-    <script src="processing-1.4.1.js"></script>
+    <script type="text/javascript" src="processing-1.4.1.js"></script>
   </head>
   <body>
-    <canvas data-processing-sources="mything.pde"></canvas>
+        <script type="text/processing">
+      //  Processing.js example sketch
+      int fontsize = 24;
+
+      void setup() {
+        size(400, 300);
+        stroke(0);
+        fill(0);
+        textFont(createFont("Arial",fontsize));
+        noLoop();
+      }
+
+      void draw() {
+        background(#F0F0E0);
+        String textstring = "inline example";
+        float twidth = textWidth(textstring);
+        text(textstring, (width-twidth)/2, height/2);
+      }
+    </script>
+    <canvas id="mainScreen" style="border: 1px solid black;"></canvas>
   </body>
 </html>
 
