--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
       int fontsize = 24;
 
       void setup() {
-        size(400, 300);
+        size(200, 300);
         stroke(0);
         fill(0);
         textFont(createFont("Arial",fontsize));
@@ -24,8 +24,7 @@
         text(textstring, (width-twidth)/2, height/2);
       }
     </script>
-    <canvas id="mainScreen" style="border: 1px solid black;"></canvas>
+    <canvas style="border: 1px solid black;"></canvas>
   </body>
 </html>
-
-
+    
